--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,25 +2,31 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '30 5 * * *'  # Runs daily at 5:30 AM UTC (11:00 AM IST)
+    - cron: '30 2 * * *'  # Runs daily at 02:30 UTC
   workflow_dispatch:  # Allows manual triggering
+
+permissions:
+  contents: write  # Allows GitHub Actions to push commits
 
 jobs:
   commit:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Configure Git with IITM email (22f2000148@ds.study.iitm.ac.in)
+      - name: Configure Git (jvrox)
         run: |
-          git config --global user.name "Jiya Verma"
+          git config --global user.name "GitHub Action"
           git config --global user.email "22f2000148@ds.study.iitm.ac.in"
 
-      - name: Make a dummy change
+      - name: Make a Change
         run: |
-          date >> daily-commit.txt
-          git add daily-commit.txt
-          git commit -m "Automated daily commit: $(date)"
-          git push
+          echo "Last run: $(date)" > last_run.txt  # Modify file to trigger commit
+
+      - name: Commit and Push Changes
+        run: |
+          git remote set-url origin https://jvrox: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@github.com/jvrox/daily-commit-bot.git
+          git add last_run.txt
+          git commit -m "Automated daily commit at $(date)" || echo "No changes to commit"
+          git push origin main
